SVC-15 #comment Fix redirection of forgot password after user updated his/her password

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="EMPOWERING FILIPINOS THROUGH ADVANCED PAYMENT SOLUTIONS ACCESSIBLE TO ALL."
+      content="Empowering Filipinos through advanced payment solutions accessible to all."
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/squid_logo.png" />
