--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,12 @@
           font-family: sans-serif;
           font-size: 0.9rem;
         }
+
+        @media screen and (max-width: 960px) {
+          .splash {
+            background-size: 80% auto;
+          }
+        }
       </style>
       <div class="splash">
         <p class="copyright">&copy; SquidPay&nbsp;</p>
